--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <i class="fas fa-bars"></i>
     </div>
     <ul class="nav-links">
-        <li><a href="./home.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="#summary-section">About Me</a></li>
         <li><a href="#experience">Experiences</a></li>
         <li><a href="#skills">Skills</a></li>
