--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Hero Section -->
     <header id="hero" class="hero-section">
-        <img src="./images/IMG_1977.jpg" alt="Marufa Sultana Sumi" class="hero-image">
+        <img src="./images/ProfilePic_2.png" alt="Marufa Sultana Sumi" class="hero-image">
         <div class="hero-content">
             <h1 class="hero-title">Marufa Sultana Sumi</h1>
             <p class="summary-subtitle">Salesforce Developer || AEM Author || Software Engineer</p>
